Bug 862540.  Make window.status actually be settable (but have no effect unless the pref that no one ever sets is set).  r=smaug